--- a/News/appsettings.json
+++ b/News/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SMM;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ExternConnection": "Server=DESKTOP-A9CE58B\\SQLEXPRESS;Database=SMM;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Connection1": "Server=(localdb)\\mssqllocaldb;Database=SMM;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Connection2": "Server=DESKTOP-A9CE58B\\SQLEXPRESS;Database=SMM;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "JwtSettings": 
   {
